--- a/language/en.yml
+++ b/language/en.yml
@@ -1,10 +1,10 @@
 #region Main
 start-pm: |
   Hey there! my name is **{}**.
-  Any questions on how to use me? use /help
-  Join Our [Group](https://t.me/userbotindo) If You wanna Report Issue 🙂
+  Any questions or guide on how to use me? use /help
+  Join Our [Group](https://t.me/gcsupportbots) If You wanna Report Issue 🙂
   I'm here to make your group management fun and easy!
-  **Managed With ❤️ By :** [UserbotIndo Team](https://t.me/userbotindo)
+  **Managed With ❤️ By :** [Veez Project Team](https://t.me/levinachannel)
   Wanna Add me to your Group? Just click the button below!
 help-pm: |
   Hello there! My name is **{}**.
